[gd_scene load_steps=10 format=3 uid="uid://bh7iue4veisdy"]

[ext_resource type="Script" path="res://draggable_block.gd" id="1_seods"]
[ext_resource type="Texture2D" uid="uid://ccwt8lvb7c666" path="res://assets/square.png" id="2_ymr7q"]
[ext_resource type="AudioStream" uid="uid://co667ppv3wfk4" path="res://audio/sfx/Footstep2_Void_SH.ogg" id="3_7l56t"]
[ext_resource type="AudioStream" uid="uid://crdkuwy7ub2jp" path="res://audio/sfx/DeSelect_Limbo_SH.ogg" id="3_qtdbx"]
[ext_resource type="AudioStream" uid="uid://dps2c7fle1skd" path="res://audio/sfx/Select_Limbo_SH.ogg" id="4_h3n4x"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_8hqyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gqwk3"]
size = Vector2(35, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bkhwe"]
size = Vector2(15, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xsv71"]
size = Vector2(90, 90)

[node name="DraggableBlock" type="RigidBody2D" groups=["pickable"]]
z_index = -10
y_sort_enabled = true
collision_layer = 2
collision_mask = 3
mass = 25.0
physics_material_override = SubResource("PhysicsMaterial_8hqyp")
gravity_scale = 0.0
inertia = 1.0
linear_damp = 2.0
angular_damp = 4.0
script = ExtResource("1_seods")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gqwk3")

[node name="Sprite2D" type="Sprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_ymr7q")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_bkhwe")

[node name="Area2DLarge" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DLarge"]
shape = SubResource("RectangleShape2D_xsv71")

[node name="BumpIntoObject" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_7l56t")
volume_db = -14.054
pitch_scale = 1.2

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_h3n4x")
volume_db = -10.0

[node name="Drop" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_qtdbx")
volume_db = -10.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2DLarge" to="." method="_on_area_2d_large_area_entered"]
[connection signal="area_exited" from="Area2DLarge" to="." method="_on_area_2d_large_area_exited"]
